--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>HOMEM-ARANHA 2</CONTRA-ATACA></h1>
-            <p>Spider-Man</p>
+            <p>Ainda é o melhor filme?</p>
         </div>
 
         <div>
