--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=_XXqhIVtS0w"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/?v=_XXqhIVtS0w"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
