--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>HOMEM-ARANHA 2</CONTRA-ATACA></h1>
-            <p>Ainda é o melhor filme?</p>
+            <h1>TOBEY MAGUIRE</CONTRA-ATACA></h1>
+            <p>É o melhor Homem-Aranha?</p>
         </div>
 
         <div>
