--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>TOBEY MAGUIRE</CONTRA-ATACA></h1>
-            <p>É o melhor Homem-Aranha?</p>
+            <p>É o melhor Homem-Aranha mesmo?</p>
         </div>
 
         <div>
